<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/donutButton"
        android:layout_width="225dp"
        android:layout_height="69dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="-10dp"
        android:text="@string/order_donuts"
        app:layout_constraintBottom_toTopOf="@+id/basketButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffeeButton" />

    <Button
        android:id="@+id/basketButton"
        android:layout_width="225dp"
        android:layout_height="69dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="-10dp"
        android:text="@string/ordering_basket"
        app:layout_constraintBottom_toTopOf="@+id/storeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutButton" />

    <Button
        android:id="@+id/storeButton"
        android:layout_width="225dp"
        android:layout_height="69dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="50dp"
        android:text="@string/store_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketButton" />

    <Button
        android:id="@+id/coffeeButton"
        android:layout_width="225dp"
        android:layout_height="69dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="-10dp"
        android:text="@string/order_coffee"
        app:layout_constraintBottom_toTopOf="@+id/donutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="139dp"
        android:layout_height="114dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/coffeeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cafe" />
</androidx.constraintlayout.widget.ConstraintLayout>